# ChangeLog for gnome-base/libghttp
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/gnome-base/libghttp/ChangeLog,v 1.3 2002/07/09 19:06:18 azarah Exp $

  09 Jun 2002; Martin Schlemmer <azarah@gentoo.org> libghttp-1.0.9-r2 :

  Libtoolized this one, as I had problems which libtoolize fixed with
  new install.

*libghttp-1.0.9-r2 (21 Mar 2002)

  21 Mar 2002; Seemant Kulleen <seemant@gentoo.org> libghttp-1.0.9-r2.ebuild :

  HTML documentation no longer gzipped.  Reported by: stefan@mdy.univie.ac.at 

*libghttp-1.0.9-r1 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.