@@ -1,8 +1,11 @@
 # ChangeLog for x11-wm/enlightenment
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/enlightenment/ChangeLog,v 1.3 2002/03/20 02:34:19 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/enlightenment/ChangeLog,v 1.4 2002/08/13 01:39:22 gerk Exp $
 
 *enlightenment-0.16.5-r4 (19 Mar 2002)
+
+  12 Aug 2002; Mark Guertin <gerk@gentoo.org> enlightenment-0.16.5-r4.ebuild :
+  Added ppc to keywords
 
   19 Mar 2002; Seemant Kulleen <seemant@gentoo.org> enlightenment-0.16.5-r4.ebuild :
 
