@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/libghttp
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/libghttp/ChangeLog,v 1.3 2002/07/09 19:06:18 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libghttp/ChangeLog,v 1.4 2002/08/13 01:37:11 gerk Exp $
+
+  12 Aug 2002; Mark Guertin <gerk@gentoo.org> libghttp-1.0.9-r2.ebuild :
+  Added ppc to keywords
 
   09 Jun 2002; Martin Schlemmer <azarah@gentoo.org> libghttp-1.0.9-r2 :
 
